--- a/AntiInterferenceCoding/hammingencodewidget.ui
+++ b/AntiInterferenceCoding/hammingencodewidget.ui
@@ -141,7 +141,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Путь к фалу с кодируемой последовательностью</string>
+    <string>Путь к файлу с кодируемой последовательностью</string>
    </property>
   </widget>
   <widget class="QTextBrowser" name="encodingTextBrowser">
@@ -225,7 +225,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Путь к фалу с пораждающей матрицей</string>
+    <string>Путь к файлу с пораждающей матрицей</string>
    </property>
   </widget>
   <widget class="QPushButton" name="gMatrixPushButton">
@@ -268,7 +268,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>430</y>
+     <y>420</y>
      <width>361</width>
      <height>20</height>
     </rect>
@@ -289,7 +289,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>430</y>
+     <y>420</y>
      <width>361</width>
      <height>20</height>
     </rect>
